# PyDGC

./: .gitignore  README.md  requirements.txt  setup.cfg
articles/: README.md
docs/source/: conf.py  index.rst  installation.rst  pydgc.clusterings.rst  pydgc.datasets.rst  pydgc.metrics.rst  pydgc.models.rst  pydgc.modules.rst  pydgc.pipelines.rst  pydgc.rst  pydgc.utils.rst
examples/pipelines/: run_best.sh
examples/pipelines/agcdrr/: config.yaml  run.py  run_robust.py
examples/pipelines/ccgc/: config.yaml  run.py  run_robust.py
examples/pipelines/daegc/: config.yaml  run.py  run_robust.py
examples/pipelines/dcrn/: config.yaml  run.py  run_robust.py
examples/pipelines/dfcn/: config.yaml  run.py  run_robust.py
examples/pipelines/dgcluster/: config.yaml  run.py  run_robust.py
pydgc/clusterings/: batch_kmeans_gpu.py  kmeans_gpu.py
pydgc/datasets/: utils.py
pydgc/metrics/: utils.py
pydgc/models/: __init__.py  ae.py  agcdrr.py  ccgc.py  daegc.py  dcrn.py  dfcn.py  dgc_model.py  dgcluster.py  gae.py  gae_ssc.py  hsan.py  magi.py  magi_batch.py  rgae.py  s3gc.py  sdcn.py
pydgc/modules/: decoder.py  encoder.py  ssc.py  utils.py
pydgc/pipelines/: __init__.py  agcdrr_pipeline.py  base_pipeline.py  ccgc_pipeline.py  daegc_pipeline.py  dcrn_pipeline.py  dfcn_pipeline.py  dgcluster_pipeline.py  gae_pipeline.py  gae_ssc_pipeline.py  hsan_pipeline.py  magi_batch_pipeline.py  magi_pipeline.py  rgae_pipeline.py  s3gc_pipeline.py  sdcn_pipeline.py
pydgc/utils/: command.py  config.py  device.py  logger.py  random.py  transform.py  visualization.py
(+65 files in other folders)
