[metadata]
name = pydgc
version = 1.0.0
author = Benyu Wu
author_email = bywu109@163.com
description = PyDGC: A Deep Graph Clustering Benchmark
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Marigoldwu/PyDGC
project_urls =
    Bug Tracker = https://github.com/Marigoldwu/PyDGC/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    Deep Graph Clustering
    Deep Clustering
    PyTorch
    PyG

[options]
package_dir =
    = pydgc
packages = find:
python_requires = >=3.8
install_requires =
    torch >= 2.1.0
    torch_geometric >= 2.5.1
    numpy
    scipy
    scikit-learn
    ogb
    yaml
    yacs
    rich

[options.packages.find]
where = pydgc